tests/NormalTests/paczka1/fuzzy1/34617972.err
Error in line 12: A358 S364 4,5
Error in line 8: xvEDZZNW1 S342 29,9
Error in line 14: 2UaC S238 79,0
Error in line 23: 2UaC S342 3,1
Error in line 31: SLur3bjdUe A358 63,6
Error in line 15: Ffj A358 99,3
